# teams-taiga-integration

./: .gitignore  README.md  pyproject.toml  run.py
app/: config.py  main.py
app/api/: taiga.py  teams.py
app/api_clients/: llm_client.py  taiga_client.py
app/logger/: logger.py
app/services/: llm_service.py  taiga_auth.py  taiga_service.py  teams_service.py
app/services/llm_service/: llm_service.py
app/services/taiga_service/: taiga_service.py  task_manager.py
app/utils/: utils.py
