[project]
name = "teams-taiga-integration"
version = "0.1.0"
description = ""
authors = [
    {name = "Ullas Zingade",email = "ullas09zingade@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "teams_taiga_integration", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
